--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -302,7 +302,7 @@ Along the vertical gradient, exposed leaves are better equipped to dissapate hea
 
 #### Biochemical and physiological traits
 
-Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Liu et al. 2010]. However, increase in temperature in upper canopy, has been shown to decrease LMA and $N_{area}$ [Carter and Cavaleri, 2014] and leaf soluble sugars, starch and non-structural carbons [Li et al.2016 **double check**]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up [Poorter et al. 2019]  
+Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. Experiemental increase in upper canopy temperature, shows that LMA and $N_{area}$ tend to decrease [Carter and Cavaleri, 2014]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up and thus shows variable results [Poorter et al. 2019]  
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
@@ -396,11 +396,10 @@ We're not aware of any other studies on this."we may want to argue that we have 
 ### Respiration
 
 **Similar to photosynthesis, respiration tends to be higher in sun leaves (Chen et al. 2020), but its temperature sensitivity appears to be similar between between sun and shade leaves.**
-(Bolstad et al. 1999) did a study at Coweeta, including elev gradient. Conflicting $Q_10$ findings shows no definite trend.
-Found higher respiration (at reference T) in canopy leaves (@bolstad_foliar_1999). 
-At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*)
-Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*)."Higher $Q_{10}$ values in the functional groups of upper canopy where temperatures are the highest may lead to exponential loses of C with increasing global temperatures depending upon the ability of canopy leaves to acclimate" [@cavaleri_foliar_2008]
-Thus, @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+
+While dark and light respiration tends to increase with light exposure, and therefore along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration, $Q_{10}$, shows conflicting findings with no definite trend.
+
+In two forests, north-eastern oak dominated-deciduous forest in the US and conifer-dominated temperate New Zealand rainforest, across species $Q_{10}$ was found to be greater in upper-canopy leaves than in lower-canopy leaves, where values differed between species [Turnbull et al. 2003]. Similarly, in sweetgum (*Liquidambara styraciflua*), upper canopy sun leaves showed greater $Q_{10}$ than lower within-canopy shade leaves [Harley et al. 1996]. However, in other feild studies, $Q_{10}$ didnot vary across species vertical profiles and light exposure such as in a lowland tropical Australian forest study, and across temperate trees at Coweeta [@bolstad_foliar_1999] $Q_{10}$. At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*). @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
 With temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum. Beyond this inflection point, fluxnet global data analysis shows that photosynthesis declines whereas respiration increases exponentially, therefore, moving from carbon sink to carbon source with increasing temperature, independent of water and irradiance [Duffy et al.2021]
 
