--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -208,7 +208,7 @@ The strength of buffering also varies with respect to distance to the coast, top
 ### Biophysical drivers
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-Maintaining optimum leaf temperature in relation to the biophysical environment, maximizes carbon assimilation by maintaining metabolic optima, in a given circumstance. This is done through the adaptation of leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
+Maintaining optimum leaf temperature for metabolic optima in relation to the biophysical environment, maximizes carbon assimilation in a given circumstance. This is done through the adaptation of leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
@@ -298,7 +298,7 @@ nocite: |
 
 #### Morphological traits
 
-Along the vertical gradient, exposed leaves are better equipped to dissapate heat, through adaptive traits such as smaller leaf size, leaf dissections--lobes and serration--among other traits, decrease effective leaf width and therefore increase the rate of heat convection per unit area between leaf and air, that lowers leaf temperature. [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Mechanisms such as vertical leaf angles, temporary wilting reduce surface light exposure and help maintain leaf temperature in exposed canopies [Ishida et al. 1999; Niinemetes, 1998]. Hydraulic traits, for example leaf vein and stomtal density, help maintain a balance between work and life, photosynthesis and thermoregulation, in the high light environment of exposed canopies [Brodribb et al. 2010]. On the other hand, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance, and lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, shade leaves that typically have greater leaf size and effective leaf width compared to sun leaves, remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017].
+Along the vertical gradient, exposed leaves are better equipped to dissapate heat, through adaptive traits such as smaller leaf size, leaf dissections--lobes and serration--among other traits, decrease effective leaf width and therefore increase the rate of heat convection per unit area between leaf and air. [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Vertical leaf angles and temporary wilting reduce surface light exposure and lower leaf temperature in exposed canopies [Ishida et al. 1999; Niinemetes, 1998]. Hydraulic traits, for example leaf vein and stomtal density, also help maintain a balance between work and life, photosynthesis and thermoregulation, in the high light environment of exposed canopies [Brodribb et al. 2010]. On the other hand, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance, and lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, shade leaves that typically have greater leaf size and effective leaf width compared to sun leaves, remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017].
 
 #### Biochemical and physiological traits
 
