--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -381,7 +381,7 @@ For 3 species in Panama, the optimum temperature for sun leaves tended to be sli
 **Leaf thermal tolerance (Tcrit/ T50)**
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. Leaf thermal thresholds strongly reflect species adaptation to their microenvironment rather than macroclimate conditions [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] and phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
 
-Typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). Across forest species, in Panama, Columbia and across latitudes, $T_{50}$ and $T_{crit}$ decreased with elevation [@feeley_thermal_2020;  Slot et al 2020; O' sullivan et al. 2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; Slot et al. 2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [Slot et al. 2020]. However, higher photosynthetic heat tolerance does not necessary increase leaf thermal safety margins, rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and had narrower thermal safety margins [Perez and Feeley, 2020]
+Typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). Across forest species, in Panama, Columbia and across latitudes, $T_{50}$ and $T_{crit}$ decreased with elevation [@feeley_thermal_2020;  Slot et al 2020; O' sullivan et al. 2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; Slot et al. 2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [Slot et al. 2020]. However, higher photosynthetic heat tolerance does not necessary increase leaf thermal safety margins. Rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had narrower thermal safety margins [Perez and Feeley, 2020.]
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 Thermal tolerance $T_{crit}$ and $T_{50}$ have been predominantly measured on sun leaves; thus there remains limited information on leaves with varying light exposures and vertical height gradient. 
@@ -397,7 +397,7 @@ We're not aware of any other studies on this."we may want to argue that we have 
 
 **Similar to photosynthesis, respiration tends to be higher in sun leaves (Chen et al. 2020), but its temperature sensitivity appears to be similar between between sun and shade leaves.**
 
-While dark and light respiration tends to increase with light exposure, and therefore along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration, $Q_{10}$, shows conflicting findings with no definite trend.
+While dark and light respiration tends to increase along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration, $Q_{10}$, shows conflicting findings with no definite trend.
 
 In two forests, north-eastern oak dominated-deciduous forest in the US and conifer-dominated temperate New Zealand rainforest, across species $Q_{10}$ was found to be greater in upper-canopy leaves than in lower-canopy leaves, where values differed between species [Turnbull et al. 2003]. Similarly, in sweetgum (*Liquidambara styraciflua*), upper canopy sun leaves showed greater $Q_{10}$ than lower within-canopy shade leaves [Harley et al. 1996]. However, in other feild studies, $Q_{10}$ didnot vary across species vertical profiles and light exposure such as in a lowland tropical Australian forest study, and across temperate trees at Coweeta [@bolstad_foliar_1999] $Q_{10}$. At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*). @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
