--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -174,7 +174,7 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, thus greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [Rambo and NOrth, 2009]. For this reason, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; Rambo and North, 2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
+The strength of this buffering varies with foliage characteristics mentioned above, and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower understory peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, thus greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [Rambo and North, 2009]. Therefore, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; Rambo and North, 2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
@@ -278,7 +278,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-individuals exposed substanially buffer inner and lower canopies from light and biophysical conditions. Thus leaf traits in canopy positions vary accordingly [Casal et al. 2011]. Several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Within-individuals exposed canopies substanially buffer inner and lower canopies from light and biophysical conditions. Thus leaf traits in canopy positions vary accordingly [Casal et al. 2011]. Several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [Chen et al. 2019], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018)
 
@@ -298,11 +298,11 @@ nocite: |
 
 #### Morphological traits
 
-Along the vertical gradient, exposed leaves are better equipped to dissapate heat, through adaptive traits such as smaller leaf size, leaf dissections--lobes and serration--among other traits, decrease effective leaf width and therefore increase the rate of heat convection per unit area between leaf and air. [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Vertical leaf angles and temporary wilting reduce surface light exposure and lower leaf temperature in exposed canopies [Ishida et al. 1999; Niinemetes, 1998]. Hydraulic traits, for example leaf vein and stomtal density, also help maintain a balance between work and life, photosynthesis and thermoregulation, in the high light environment of exposed canopies [Brodribb et al. 2010]. On the other hand, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance, and lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, shade leaves that typically have greater leaf size and effective leaf width compared to sun leaves, remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017].
+Along the vertical gradient, exposed leaves are better equipped to dissapate heat, through adaptive traits such as smaller leaf size, leaf dissections--lobes and serration-- decrease effective leaf width and therefore increase the rate of heat convection per unit area between leaf and air. [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Vertical leaf angles and temporary wilting reduce surface light exposure and lower leaf temperature in exposed canopies [Ishida et al. 1999; Niinemetes, 1998]. Hydraulic traits, for example leaf vein and stomtal density, also help maintain a balance photosynthesis and thermoregulation, in the high light environment of exposed canopies [Brodribb et al. 2010]. On the other hand, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance, and lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, shade leaves that typically have greater leaf size and effective leaf width compared to sun leaves, remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017].
 
 #### Biochemical and physiological traits
 
-Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. Experiemental increase in upper canopy temperature, shows that LMA and $N_{area}$ tend to decrease [Carter and Cavaleri, 2014]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up and thus shows variable results [Poorter et al. 2019]  
+Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks under available soil nitrogen content [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. Experiemental increase in upper canopy temperature, shows that LMA and $N_{area}$ tend to decrease [Carter and Cavaleri, 2014] due to increase in respiration **?** [**REF**]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up and thus shows variable results [Poorter et al. 2019]  
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
@@ -323,7 +323,7 @@ Proportional to vertical light gradients at an intra- and inter-species level, s
 
 ### Interspecific varaiation 
 
-Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment as observed and similar to within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. Under constant light conditions of open-grown canopy and understory trees, for example in large gaps, ontogeny differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [Thomas and Winner, 2002; Houter and Pons 2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might more susceptible to heat stress at a vertical gradient than others [Fauset et al. 2018]. 
+Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [Thomas and Winner, 2002; Houter and Pons 2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might more susceptible to heat stress at a vertical gradient than others [Fauset et al. 2018]. 
 
 Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
 
@@ -386,7 +386,7 @@ Typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et a
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 Thermal tolerance $T_{crit}$ and $T_{50}$ have been predominantly measured on sun leaves; thus there remains limited information on leaves with varying light exposures and vertical height gradient. 
 
-For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, though the results weren't significant and both were measured near ground level [Slot et al. 2019]. In tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions had higher heat tolerance (by $2{^\circ}C$) than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased from June to August.
+For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, though the results weren't significant and both were measured near ground level [Slot et al. 2019]. In tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions had higher heat tolerance (by $2{^\circ}C$) than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased from June to August [Knapp et al. 1994]
 
 In other cases, leaf thermal tolerance reflects microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions (Curtis et al. 2019). Greater $T_{50}$ in lower north-position correlated with longer leaf thermal time constants, along with with low-wind speed and greater canopy and air temperature [Curtis et al. 2019]. 
 
@@ -399,7 +399,7 @@ We're not aware of any other studies on this."we may want to argue that we have 
 
 While dark and light respiration tends to increase along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration, $Q_{10}$, shows conflicting findings with no definite trend.
 
-In two forests, north-eastern oak dominated-deciduous forest in the US and conifer-dominated temperate New Zealand rainforest, across species $Q_{10}$ was found to be greater in upper-canopy leaves than in lower-canopy leaves, where values differed between species [Turnbull et al. 2003]. Similarly, in sweetgum (*Liquidambara styraciflua*), upper canopy sun leaves showed greater $Q_{10}$ than lower within-canopy shade leaves [Harley et al. 1996]. However, in other feild studies, $Q_{10}$ didnot vary across species vertical profiles and light exposure such as in a lowland tropical Australian forest study, and across temperate trees at Coweeta [@bolstad_foliar_1999] $Q_{10}$. At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*). @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+In two forests, north-eastern oak dominated-deciduous forest in the US and conifer-dominated temperate New Zealand rainforest, across species $Q_{10}$ was found to be greater in upper-canopy leaves than in lower-canopy leaves, where values differed between species [Turnbull et al. 2003]. Similarly, in sweetgum (*Liquidambara styraciflua*), upper canopy sun leaves showed greater $Q_{10}$ than lower within-canopy shade leaves [Harley et al. 1996]. However, in other feild studies, $Q_{10}$ didnot vary across species vertical profiles and light exposure such as in a lowland tropical Australian forest study [Weerasinghe et al. 2014], and across temperate trees at Coweeta [@bolstad_foliar_1999] $Q_{10}$. At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*). @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
 With temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum. Beyond this inflection point, fluxnet global data analysis shows that photosynthesis declines whereas respiration increases exponentially, therefore, moving from carbon sink to carbon source with increasing temperature, independent of water and irradiance [Duffy et al.2021]
 
@@ -427,7 +427,7 @@ Many observations of larger trees suffering more during drought (Bennett et al. 
 One likely mechanism behind this pattern is that the crowns of larger trees exist higher in the vertical profile and therefore are exposed to higher evaporative demand and solar radiation [@mcgregor_tree_nodate].
 Although drought is primarily a hydraulic problem, lack of water --> lower gs --> higher leaf T, so leaves face tradeoffs of water loss vs potentially damaging leafT. 
 
-On the basis of phenology, temperate understory  trees tend to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renner, 2019]. However, short-term May spring heat waves have shown to negetively impact partially expanded canopy leaves by inducing leaf shedding, more than understory saplings [Filewood and Thomas, 2013].
+On the basis of phenology, temperate understory  trees tend to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in annual temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renner, 2019]. However, short-term May spring heat waves have shown to negetively impact partially-expanded canopy leaves by inducing leaf shedding and decreasing photosynthesis in reflushed leaves, more than in understory saplings that are buffered from such conditions [Filewood and Thomas, 2013].
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
