--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -174,7 +174,7 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies with foliage characteristics mentioned above, and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower understory peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, thus greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [@ramboCanopyMicroclimateResponse2009]. Therefore, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
+The strength of this buffering varies with foliage characteristics mentioned above, and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. Similarly, when compared to neighboring tree crop agricultural plantations, intact tropical forests maintain lower understory peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, thus greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [@ramboCanopyMicroclimateResponse2009]. Therefore, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
@@ -352,7 +352,7 @@ nocite: |
 
 ### Stomatal conductance
 
-While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by stomatal conductance; and therefore their ability to photosynthesize as well. Diurnally, stomtal conductance increases with height and is greater in the upper canopy compared to shaded canopies during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010]. During midday, stomtal closure occurs, when evaporative demand exceeds water transport capacity in exposed leaves [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004]. Thus, stomatal limitation is greater and steeper in exposed canopies than shade leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Similarly, max transpiration rate increases with canopy height [@kosugiSeasonalFluctuationsTemperature2006]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger], where understory leaves tend to open their stomata wider than upper canopy leaves [@kosugiSeasonalFluctuationsTemperature2006]. 
+While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by stomatal conductance; and therefore their ability to photosynthesize as well. During the day, stomtal conductance increases with height and is greater in the upper canopy compared to shaded canopies [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010]. During midday, stomtal closure occurs, when evaporative demand exceeds water transport capacity in exposed leaves [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004]. Thus, stomatal limitation is greater and steeper in exposed canopies than shade leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Similarly, max transpiration rate increases with canopy height [@kosugiSeasonalFluctuationsTemperature2006]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger], where understory leaves tend to open their stomata wider than upper canopy leaves [@kosugiSeasonalFluctuationsTemperature2006]. 
 
 ### Photosynthesis
 
