--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -346,7 +346,7 @@ However, as we detail below, there are limited studies comparing thermal respons
 ```
 ---
 nocite: | 
-  @bolstad_foliar_1999; @roberts_stomatal_1990; @slot_photosynthetic_2019; @harleyEffectsLightTemperature1996; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @ishiiExploringRelationshipsCanopy2004; @curtis_intracanopy_2019; @bolstad_foliar_1999; @kafutiFoliarWoodTraits2020; 
+ @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007;Carter and Cavaleri 2018; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; Hamerlynck and Knapp 1994; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; Harris and Medina 2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @athertonSpatialVariationLeaf2017
 ---
 
 
