--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -291,8 +291,8 @@ An increasing number of studies point towards the importance of incorporating su
 # refs in this table need to go in the nocite field below (easiest in alphabetical order)
 ```
 ---
-nocite: | 
-  @mau_temperate_2018; @hernandezSimilarTemperatureDependence2020; @cobleHowVerticalPatterns2016a; @slotPhotosyntheticHeatTolerance2019; @valladaresShadeToleranceKey2008b; @beaumontVerticalGradientsLeaf2009; @sackHowStrongIntracanopy2006,@cobleLightDrivesVertical2014; @scartazzaInvestigatingEuropeanBeech2016; @martinCovarianceSunShade2020; @bolstad_foliar_1999; @harleyEffectsLightTemperature1996; @kullDistributionLeafPhotosynthetic1998; @kafutiFoliarWoodTraits2020; @duursmaVerticalCanopyGradients2006; @cobleLightDrivesVertical2014a; @vanwittenbergheVariabilityStomatalConductance2012; @poorterLeafOpticalProperties1995; @poorterMetaanalysisPlantResponses2019b; @cavaleri_foliar_2008; @niinemetsAcclimationHighIrradiance1998; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @kusiPlasticLeafMorphology2020
+nocite: |
+@mau_temperate_2018; @cobleLightDrivesVertical2014; @@sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; Liakoura 1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1998; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; Koniger et al. 1995; Mastubara et al. 2009; Harris and Medina 2013; Hansen et al. 2001; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000
 ---
 
 
